# Paperbox

./: README.md  pyproject.toml
paperbox/: cli.py  constants.py  db.py  graphing.py  ingest.py  nlp.py  utils.py
paperbox.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
paperbox/extractors/: __init__.py  docx.py  html.py  pdf.py  text.py
tests/: conftest.py  test_extract_and_index.py  test_pdf_smoke.py
